# rubiks_cube

./: CMakeLists.txt  README.md
src/: main.cpp
src/Model/: CMakeLists.txt  RubiksCube.cpp  RubiksCube.hpp  RubiksCubeBitwise.cpp  RubiksCubeBitwise.hpp
src/Model/tests/: CMakeLists.txt  unittest_move_generator.cpp
src/View/: TerminalView.cpp  TerminalView.hpp  utils.cpp  utils.hpp
